css/styles.css
* {
    box-sizing: border-box;
}

html, body {
    height: 100vh;
    width: 100vw;
    padding: 0;
    margin: 0;
}

/* Body  */

body {
    background-color: hsl(210, 46%, 95%);
    font-family: 'Manrope', sans-serif;
    display: grid;
    place-items: center;
    font-size: 13px;
}

/* Main */

main {
    display: flex;
    height: 50%;
    width: 60%;
}

/* Image -- Tab */

#image--tab {
    width: 40%;
    background: url("/images/drawers.jpg") center center / cover no-repeat;
    border-radius: 10px 0 0 10px;
}

/* Article -- Tab */

#article--tab {
    width: 60%;
    background-color: #fff;
    border-radius: 0 10px 10px 0;
    padding: 20px 40px;
}


/* Head Text */

.head--text, .profile--text span {
    color: hsl(217, 19%, 35%);
}

.head--text {
    font-size: 1.2rem;
}

/* Para Text */

.para--text, .profile--text {
    color: hsl(212, 23%, 69%);
}

/* Info Section */

.info-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* Profile */

.profile {
    display: flex;
    align-items: center;
}

.profile--img {
    height: 35px;
    width: 35px;
    border-radius: 100%;
    float: left;
    clear: both;
    margin-right: 10px;
}

.profile--text {
    width: 200px;
}

/* Social media */

.share {
    height: 27px;
    width: 27px;
    display: grid;
    place-items: center;
    background-color: hsl(210, 46%, 95%);
    border-radius: 100%;
}

svg {
     fill: #fff;
     cursor: pointer;
}

/* Tool tip */

.tooltip {
    position: relative;
}

.tooltip, .tooltip-text {
    display: inline-block;
}


.tooltip-text {
    position: absolute;
    color: hsl(212, 23%, 69%);
    background-color: hsl(217, 19%, 35%);
    width: 230px;
    height: 50px;
    border-radius: 6px;
    z-index: 1;
    bottom: 39%;
    left: 75%;
    margin-left: -100px;
    letter-spacing: 2px;
    box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.18);
    visibility: hidden;
}

/* Arrow */

.tooltip-text::after {
    content:"";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -7px;
    border: 7px solid;
    border-color: hsl(217, 19%, 35%) transparent transparent transparent;
}

/* Tooltip Inner content */
.inner-content {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

/* Show Tooltip with Javascript */
.show-tooltip {
    visibility: visible;
}


/* Footer */

footer {
    position: absolute;
    bottom: 2%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* For tablet */

@media (max-width: 768px) {
    
    main {
        flex-direction: column;
        height: 80vh;
        width: 90vw;
    }

    #image--tab {
        height: 40vh;
        width: 100%;
        border-radius: 10px 10px 0 0;
    }

    #article--tab {
        height: 60vh;
        width: 100%;
        border-radius: 0 0 10px 10px;
    }

    .head--text {
        font-size: 1rem;
    }

    .para--text, .profile {
        margin-top: 20px;
    }


    /* Footer */

    footer {
        display: none;
    }
}

